# online_payments

./: .env sample  Dockerfile  README.md  docker-compose.yaml  fixtures.json  pyproject.toml  setup.cfg
config/: settings.py  urls.py
users/: models.py  paginators.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_uid.py  0003_alter_user_uid.py
wallets/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
wallets/migrations/: 0001_initial.py  0002_rename_uuid_wallet_wallet_uuid.py
wallets/tests/: conftest.py  test_views.py
